<resources>
    <string name="app_name">noheads</string>
    <string name="enter_artist">Enter artist</string>
    <string name="add_song">Add Song</string>
    <string name="enter_song">Enter song</string>
    <string name="textview">TextView</string>
    <string name="start_game">Start Game</string>
    <string name="quick_game">Quick Game</string>
    <string name="invite_players">Invite Players</string>
    <string name="show_invitations">Show Invitations</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">NoHeads</string>
    <string name="game_title">No Heads</string>
    <string name="multiplayer_mode">Multiplayer</string>
    <string name="name_hint">Name</string>
    <string name="invitePlay">Invite to play</string>
    <string name="new_song">Add new song</string>
    <string name="Login">Login</string>
    <array name="languages">
        <item>Polish</item>
        <item>English</item>
    </array>
</resources>
