<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:text="@string/start_game"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="182dp" />

    <Button
        android:id="@+id/buttonQuickGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:text="@string/quick_game" />

    <Button
        android:id="@+id/buttonInvitePlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonQuickGame"
        android:text="@string/invite_players" />

    <Button
        android:id="@+id/buttonShowInvitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonInvitePlayers"
        android:text="@string/show_invitations" />

</RelativeLayout>