<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wpam.noheads.AddSongActivity">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/enter_artist"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="1dp"
            android:backgroundTint="#5B2C6F"/>

        <Spinner
            android:id="@+id/spinnerLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextSong"
            android:layout_marginTop="12dp"
            android:entries="@array/languages"
            android:fontFamily="casual"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="111dp" />

        <Button
            android:id="@+id/buttonAddSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/blackColor"
            android:theme="@style/Start.Button"
            android:layout_below="@+id/spinnerLanguages"
            android:layout_marginTop="23dp"
            android:text="@string/add_song"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="182dp" />

        <EditText
            android:id="@+id/editTextSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_song"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp"
            android:backgroundTint="#5B2C6F"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="353dp"
        android:layout_height="239dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        app:srcCompat="@drawable/guesssong" />

</RelativeLayout>
